fix: correção na lógica de renderização do canvas e legibilidade de elementos

--- a/src/components/TimelineItem/TimelineItem.estilos.css
+++ b/src/components/TimelineItem/TimelineItem.estilos.css
@@ -210,7 +210,7 @@
     .timeline-item-period {
         justify-content: center;
         background-color: var(--corTema);
-        background-image: linear-gradient(-45deg, color-mix(in srgb, var(--corTema) 70%, #000), var(--corTema), #fff);
+        background-image: linear-gradient(-45deg, color-mix(in srgb, var(--corTema) 70%, #000), var(--corTema),#ffffff);
         color: #fff;
         box-shadow: 0 0 5px color-mix(in srgb, var(--corTema) 70%, #ffffff),
             0 0 10px color-mix(in srgb, var(--corTema) 70%, #ffffffda),
